samples/_failures_safe/1761435129_4cbe6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8027f79f.c: In function ‘main’:
./samples/SAFE/__tmp_8027f79f.c:148:12: error: missing terminating " character
  148 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_8027f79f.c:148:5: error: expected expression at end of input
  148 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_8027f79f.c:148:5: error: expected declaration or statement at end of input
